@@ -3,9 +3,11 @@
 changes relative to sbcl-1.3.18:
   * enhancement: specialized arrays can be printed readably without using
     *read-eval*
-  * bug fix: backtracing from several threads at once could fail
   * enhancement: SB-DEBUG:PRINT-BACKTRACE truncates huge string arguments.
     The full string remains available for inspection via (SB-DEBUG:ARG).
+  * bug fix: backtracing from several threads at once could fail
+  * bug fix: floating-point infinities could not be used as keys
+    in EQUALP hash tables. (lp#1696274)
 
 changes in sbcl-1.3.18 relative to sbcl-1.3.17:
   * minor incompatible change: existing values of CFLAGS, ASFLAGS,
